--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "fullpage.js": "^4.0.25",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -16,7 +17,8 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
