--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
