--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fullpage.js": "^4.0.25",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
