--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.0",
     "fullpage.js": "^4.0.25",
+    "http-proxy-middleware": "^3.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
