--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "base-64": "^1.0.0",
     "framer-motion": "^11.3.0",
     "fullpage.js": "^4.0.25",
     "http-proxy-middleware": "^3.0.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
